@@ -1,7 +1,7 @@
 package cn.JvavRE.playerTopList.config;
 
+import cn.JvavRE.playerTopList.PlayerTopList;
 import cn.JvavRE.playerTopList.tasks.ListsManager;
-import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.Statistic;
 import org.bukkit.configuration.ConfigurationSection;
@@ -10,6 +10,8 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class TopListLoader {
+    private static PlayerTopList plugin;
+
     private static boolean isStatistic(String type) {
         try {
             Statistic.valueOf(type);
@@ -23,30 +25,29 @@ public class TopListLoader {
         return name != null && !name.isEmpty();
     }
 
-    private static void addTopListToManager(String name, String type, List<String> sMaterials) {
+    private static void addTopListToManager(String name, String type, List<String> materialNames) {
         if (!isName(name)) {
-            Bukkit.getLogger().warning("不是有效的列表名称: '" + name + "'");
+            plugin.getLogger().warning("不是有效的列表名称: '" + name + "'");
             return;
         }
 
         if (!isStatistic(type)) {
-            Bukkit.getLogger().warning("不是有效的统计类型: '" + type + "'");
+            plugin.getLogger().warning("不是有效的统计类型: '" + type + "'");
             return;
         }
 
         List<Material> materials = new ArrayList<>();
 
-        if (!sMaterials.isEmpty() && sMaterials.get(0).equals("ALL")) {
+        if (!materialNames.isEmpty() && materialNames.getFirst().equals("ALL")) {
             for (Material material : Material.values()) {
-                if (material.isBlock() && material.isSolid()) {
-                    materials.add(material);
-                }
+                if (material.isSolid()) materials.add(material);
             }
+
         } else {
-            for (String sMaterial : sMaterials) {
-                Material material = Material.matchMaterial(sMaterial);
+            for (String materialName : materialNames) {
+                Material material = Material.matchMaterial(materialName);
                 if (material == null) {
-                    Bukkit.getLogger().warning("不是有效的材料: '" + sMaterial + "'");
+                    plugin.getLogger().warning("不是有效的材料: '" + materialName + "'");
                     continue;
                 }
                 materials.add(material);
@@ -54,7 +55,7 @@ public class TopListLoader {
         }
 
         ListsManager.addNewList(name, Statistic.valueOf(type), materials);
-        Bukkit.getLogger().info("成功添加列表: " + name + " (" + type + ")");
+        plugin.getLogger().info("成功添加列表: " + name + " (" + type + ")");
     }
 
     protected static void loadTopLists(ConfigurationSection section) {
@@ -69,5 +70,9 @@ public class TopListLoader {
 
             addTopListToManager(name, type, material);
         }
+    }
+
+    public static void setPlugin(PlayerTopList plugin) {
+        TopListLoader.plugin = plugin;
     }
 }
